Resolves: tdf#141398 auto-select first entry of filtered results

apparent regression from:

commit c403c86c6da4db0a6f2864ad4e13def9a3898cd4
Author:     Caolán McNamara <caolanm@redhat.com>
AuthorDate: Sun Mar 17 19:22:08 2019 +0000

    weld SwFieldRefPage

    Change-Id: I5ae3965aa681ea1f5a005fbc8dad4d0ce36af1b3
    Reviewed-on: https://gerrit.libreoffice.org/69373

Change-Id: Icb868403d31e1a6b57ae957f4eb98deafcc7f940
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171526
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins